Fix buttons on IE

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -91,6 +91,13 @@ button:hover {
 }
 
 .button {
+    color: black;
+    text-decoration: none;
+    font-size: small;
+    text-align: center;
+    border-radius: 0;
+    background-color: #ffffff;
+    border: none;
     width: 80px;
     float: left;
     margin: 0.2em 0.8em;
@@ -101,13 +108,16 @@ button:hover {
     height: 20px;
     background-color: #DBDEDE;
     vertical-align: middle;
+    float: none;
 }
 
 .run-button {
     position: absolute;
     top: 7px;
     right: 20px;
+    width: 40px;
     z-index: 6;
+    margin: 0px;
 }
 
 #error {
